fix: break layout due to whitespaces between inline-block elements

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 /* Basic Style */
 
 body {
